--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 
-jquery/plugins/*
+jquery/plugins/jtsage-jquery-mobile-simpledialog
+jquery/plugins/popup
+jquery/plugins/web-ui-fw
 drupalgap/pages/home.html
 test.html
 
